[package]
name = "respon-cli"
version = "0.1.0"
edition = "2024"
description = "Command-line client for submitting respon attendance"

[[bin]]
name = "respon"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.13.4", default-features = false, features = [
  "blocking",
  "cookies",
  "form",
  "gzip",
  "rustls",
] }
clap = { version = "4.6.1", features = ["derive"] }
thiserror = "2.0.18"
url = "2.5.8"
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }
scraper = "0.27.0"
